<?xml version="1.0" encoding="utf-8"?><!--更改最外层为layout标签-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--绑定数据-->
    <data>
        <variable
            name="viewModel"
            type="com.example.androidmvvmtest.viewmodels.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/status_bar_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_edt_login"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@={viewModel.requestBeanMutableLiveData.username}"
            android:textAllCaps="false"
            android:textColor="@color/bg_login_btn"
            android:textColorHint="@color/bg_login_btn_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edt_login"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@={viewModel.requestBeanMutableLiveData.password}"
            android:textColor="@color/bg_login_btn"
            android:textColorHint="@color/bg_login_btn_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_re_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edt_login"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@={viewModel.requestBeanMutableLiveData.repassword}"
            android:textColor="@color/bg_login_btn"
            android:textColorHint="@color/bg_login_btn_hint"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/register"
            android:textColor="@color/login_btn_text"
            android:textSize="18sp" />

    </LinearLayout>

</layout>
