<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_white_radius_12">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/dialog_tip_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:textSize="14sp" />

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_content"
            android:background="@color/edit_dialog_text" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/v_line"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_below="@+id/v_line"
            android:layout_centerHorizontal="true"
            android:background="@color/edit_dialog_text" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/v_line"
            android:layout_toEndOf="@+id/tv_cancel"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/edit_dialog_text"
            android:textSize="14sp" />

    </RelativeLayout>

</layout>